# pybind11-templates

./: .gitmodules  README.md
cpp/: main.py
cpp-threaded/: CMakeLists.txt  main.py  py_collatz.py
cpp-threaded/src/: collatz.cpp  collatz.h  module.cpp
cpp/src/: foo_class.cpp  foo_class.h  foo_functions.cpp  foo_functions.h  module.cpp
cuda/: CMakeLists.txt  main.py
cuda-foomatrix/: 2q  CMakeLists.txt  README.md  build  main.py
cuda-foomatrix/src/: CMakeLists.txt  build  device_kernels.cu  device_kernels.h  foo_matrix.cu  foo_matrix.h  host_kernels.cpp  host_kernels.h  main.cpp  module.cpp
cuda-foomatrix/src/temp/: CMakeCache.txt  Makefile  cmake_install.cmake  foo
cuda-foomatrix/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
cuda-numpy/: CMakeLists.txt  main.py
cuda-numpy/src/: foo_functions.cu  foo_functions.h  kernels.cu  kernels.h  module.cu
cuda/src/: cpp_functions.cpp  cpp_functions.h  foo_array.cpp  foo_array.cu  foo_array.h  foo_functions.cu  foo_functions.h  mat_add_one.cu  mat_add_one.h  module.cpp  module.cu
cupy/: CMakeLists.txt  build.sh  cupy_functions.py  main.py
cupy/src/: cu.h  extension_functions.cu  extension_functions.h  kernels.cu  kernels.h  module.cu
numpy/: CMakeLists.txt  build  main.py
numpy-screenshot/: CMakeLists.txt  build.sh  main.py
numpy-screenshot/src/: module.cpp  screenshot.cpp  screenshot.h
numpy/src/: foo_functions.cpp  foo_functions.h  module.cpp
numpy/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
